docs/api/qiskit/0.33/qiskit.circuit.ClassicalRegister.md
---
title: ClassicalRegister
description: API reference for qiskit.circuit.ClassicalRegister
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.ClassicalRegister
---

# ClassicalRegister

<span id="qiskit.circuit.ClassicalRegister" />

`ClassicalRegister(size=None, name=None, bits=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/classicalregister.py "view source code")

Bases: `qiskit.circuit.register.Register`

Implement a classical register.

Create a new generic register.

Either the `size` or the `bits` argument must be provided. If `size` is not None, the register will be pre-populated with bits of the correct type.

**Parameters**

*   **size** (*int*) – Optional. The number of bits to include in the register.
*   **name** (*str*) – Optional. The name of the register. If not provided, a unique name will be auto-generated from the register type.
*   **bits** (*list\[Bit]*) – Optional. A list of Bit() instances to be used to populate the register.

**Raises**

*   **CircuitError** – if both the `size` and `bits` arguments are provided, or if neither are.
*   **CircuitError** – if `size` is not valid.
*   **CircuitError** – if `name` is not a valid name according to the OpenQASM spec.
*   **CircuitError** – if `bits` contained bits of an incorrect type.

## Methods

### index

<span id="qiskit.circuit.ClassicalRegister.index" />

`ClassicalRegister.index(bit)`

Find the index of the provided bit within this register.

### qasm

<span id="qiskit.circuit.ClassicalRegister.qasm" />

`ClassicalRegister.qasm()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/classicalregister.py "view source code")

Return OPENQASM string for this register.

## Attributes

<span id="qiskit.circuit.ClassicalRegister.instances_counter" />

### instances\_counter

`= count(0)`

<span id="qiskit.circuit.ClassicalRegister.name" />

### name

Get the register name.

<span id="qiskit.circuit.ClassicalRegister.name_format" />

### name\_format

`= re.compile('[a-z][a-zA-Z0-9_]*')`

<span id="qiskit.circuit.ClassicalRegister.prefix" />

### prefix

`= 'c'`

<span id="qiskit.circuit.ClassicalRegister.size" />

### size

Get the register size.

